# YAP-Wrapper

./: README.md  YAPWrapper.pyproj  YAPWrapper.sln  conversion_table.json  enums.py  hebtokenizer.py  setup.cfg  spmrl_schema.md  spmrl_to_ud.py  yap_api.py
examples/: heb_tokenizer.py  yap_api.py
yap_wrapper/: __init__.py  enums.py  hebtokenizer.py  yap_api.py
