[metadata]
name = yap-wrapper
version = 0.0.1
author = Amit Shkolnik
description = Python interface to Bar-Ilan University ONLP lab YAP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amit-shkolnik/YAP-Wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = yap_wrapper
python_requires = >=3.6
install_requires = 
    numpy
    pandas
    requests
